--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/font": "^14.2.15",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "json-server": "^1.0.0-beta.3",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
