--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
