--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "@mui/material": "^6.2.1",
     "@next/font": "^14.2.15",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.65.1",
+    "@tanstack/react-query-devtools": "^5.65.1",
     "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
-    "next": "15.1.3",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
+    "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
-    "react-simple-star-rating": "^5.1.7"
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
